Finished massive star section!

--- a/References/library-biblatex.bib
+++ b/References/library-biblatex.bib
@@ -769,6 +769,31 @@
   file = {/Users/py13je/Zotero/storage/CHJ6UNSF/Colella and Woodward - 1984 - The Piecewise Parabolic Method (PPM) for gas-dynam.pdf}
 }
 
+@book{contiLuminousHotStars2012,
+  title = {From {{Luminous Hot Stars}} to {{Starburst Galaxies}}},
+  author = {Conti, Peter S. and Crowther, Paul A. and Leitherer, Claus},
+  date = {2012-10-01},
+  url = {https://ui.adsabs.harvard.edu/abs/2012flhs.book.....C},
+  urldate = {2022-02-23},
+  abstract = {1. Introduction; 2. Observed properties; 3. Stellar atmospheres; 4. Stellar winds; 5. Evolution of single stars; 6. Binaries; 7. Birth of massive stars and star clusters; 8. The interstellar environment; 9. From giant HII regions to HII galaxies; 10. Starburst phenomena; 11. Cosmological implications; References; Index.},
+  annotation = {ADS Bibcode: 2012flhs.book.....C},
+  file = {/Users/py13je/Zotero/storage/4EXR49G8/Conti et al. - 2012 - From Luminous Hot Stars to Starburst Galaxies.pdf}
+}
+
+@article{contiRelationshipWRStars1975,
+  title = {On the Relationship between {{Of}} and {{WR}} Stars.},
+  author = {Conti, P. S.},
+  date = {1975-01-01},
+  journaltitle = {Memoires of the Societe Royale des Sciences de Liege},
+  volume = {9},
+  pages = {193--212},
+  url = {https://ui.adsabs.harvard.edu/abs/1975MSRSL...9..193C},
+  urldate = {2022-02-23},
+  abstract = {Current knowledge about the physical properties of Of, WR, and P Cygni stars is reviewed. Criteria for each classification are outlined, and it is noted that all three types are characterized by a stellar wind and a circumstellar envelope. Some sample spectra of Of, WR, and P Cyg stars are presented, WR stars are shown to have more extensive envelopes than Of stars, and the 'peeled onion skin' model of WR stars is described. Mass-loss rates for P Cyg stars are discussed, techniques for deriving the parameters of Of and WR stars are summarized, and an H-R diagram is plotted for O, Of, and WR stars. A unifying hypothesis relating O, Of, and WR stars is proposed according to which O stars become Of stars if they are sufficiently massive and luminous for a substantial wind to be generated, the mass-loss rate in single Of stars may be sufficient to produce single WR stars, and the mass-loss rate in binary Of stars must be sufficient to produce binary WR stars.},
+  keywords = {Astrophysics,B Stars,Binary Stars,Emission Spectra,Hertzsprung-Russell Diagram,Hot Stars,Line Spectra,O Stars,Stellar Envelopes,Stellar Luminosity,Stellar Mass Ejection,Stellar Models,Stellar Spectra,Stellar Winds},
+  annotation = {ADS Bibcode: 1975MSRSL...9..193C}
+}
+
 @article{crowther_dust_2003,
   title = {Dust {{Formation}} around {{Wolf-Rayet Stars}}},
   author = {Crowther, Paul A.},
@@ -1284,6 +1309,21 @@
   abstract = {We present a model of a radiation-driven stellar wind with a correction factor for the finite size of the star as well as the centrifugal force due to the star's rotation. The addition of the finite disk factor reduces the line force near the star and increases it far from the star, which lowers the mass-loss rate, increases the terminal velocity, and makes the velocity law more gradual. These changes bring the wind model into much closer agreement with observations of hot star winds. In particular, the decrease in the ratio of terminal velocity to escape velocity in the B sugergiants can now be explained as due to a change in the mixture of driving lines. Including a centrifugal force (in the equatorial plane) decreases the terminal velocity and increases the massloss rate, but neither effect is measurable in current data.},
   langid = {english},
   file = {/Users/py13je/Zotero/storage/DVHAXMMA/Friend and Abbott - 1986 - The theory of radiatively driven stellar winds. II.pdf}
+}
+
+@article{gamowWCWNStars1943,
+  title = {On {{WC}} and {{WN Stars}}.},
+  author = {Gamow, G.},
+  date = {1943-11-01},
+  journaltitle = {The Astrophysical Journal},
+  volume = {98},
+  pages = {500},
+  issn = {0004-637X},
+  doi = {10.1086/144581},
+  url = {https://ui.adsabs.harvard.edu/abs/1943ApJ....98..500G},
+  urldate = {2022-02-24},
+  annotation = {ADS Bibcode: 1943ApJ....98..500G},
+  file = {/Users/py13je/Zotero/storage/4AWP6GLM/Gamow - 1943 - On WC and WN Stars..pdf}
 }
 
 @article{gayley_sudden_1997,
@@ -3855,6 +3895,24 @@
   archiveprefix = {arXiv},
   keywords = {Astrophysics - Instrumentation and Methods for Astrophysics,Physics - Computational Physics},
   file = {/Users/py13je/Zotero/storage/CJ3KZHWW/Stone et al. - 2020 - The Athena++ Adaptive Mesh Refinement Framework D.pdf;/Users/py13je/Zotero/storage/3T3YB3PA/2005.html}
+}
+
+@article{stothersEvolutionMassiveStars1996,
+  title = {Evolution of {{Massive Stars}} into {{Luminous Blue Variables}} and {{Wolf-Rayet Stars}} for a {{Range}} of {{Metallicities}}: {{Theory}} versus {{Observation}}},
+  shorttitle = {Evolution of {{Massive Stars}} into {{Luminous Blue Variables}} and {{Wolf-Rayet Stars}} for a {{Range}} of {{Metallicities}}},
+  author = {Stothers, Richard B. and Chin, Chao-Wen},
+  date = {1996-09-01},
+  journaltitle = {The Astrophysical Journal},
+  volume = {468},
+  pages = {842},
+  issn = {0004-637X},
+  doi = {10.1086/177740},
+  url = {https://ui.adsabs.harvard.edu/abs/1996ApJ...468..842S},
+  urldate = {2022-02-23},
+  abstract = {Evolutionary tracks for 30-90 Msun stars, computed along the lines described in our recent series of papers, suggest that luminous blue variables (LBVs) are the blue remnants of a prior phase of heavy mass loss. They are now intermittently experiencing ionization-induced dynamical instability within their hydrogen-poor envelopes, while their massive helium cores are in an advanced stage of central helium burning. In the H-R diagram, our new evolutionary models successfully explain the high- and low- temperature limits, the low-luminosity limit, and the relative luminosity function of the observed LBVs at quiescence which have log (L/Lsun) {$<$} 6.3. Metal-poor LBVs are predicted (correctly, in the only case known) to be significantly cooler than LBVs with normal metallicities. In the (mass, luminosity) plane, the models and observed stars agree closely, and show no discernible metals dependence. Predicted values of the surface hydrogen abundance and of the expelled mass during the LBV phase match reasonably well the available observational data, which, however, are still very crude. The observed cycles of mass loss are predicted correctly. Pre-LBV and post-LBV stars can be identified with the hydrogen-poor and hydrogen-free WN stars, respectively. Post-red-supergiant lifetimes, derived from published star counts and kinematical ages of nebulae around the WN stars and LBVs, are used to infer an approximate mean value of the rate of stellar wind mass loss from luminous red supergiants. This parameter is crucial for understanding stellar evolution at log (L/Lsun) {$<$} 5.8. Stars more luminous may never become red, and may spend all, or nearly all, of their post-main-sequence lives as blue supergiants. Our theory of LBVs makes a number of other predictions that have not yet been tested. A critical comparison with the very different theory of Langer et al. is presented.},
+  keywords = {STARS: EVOLUTION,STARS: OSCILLATIONS,STARS: SUPERGIANTS,STARS: VARIABLES: OTHER LUMINOUS BLUE VARIABLES,STARS: WOLF-RAYET},
+  annotation = {ADS Bibcode: 1996ApJ...468..842S},
+  file = {/Users/py13je/Zotero/storage/VM9LLQKH/Stothers and Chin - 1996 - Evolution of Massive Stars into Luminous Blue Vari.pdf}
 }
 
 @article{strickland_numerical_1995,
