--- a/Acknowledgement/acknowledgement.tex
+++ b/Acknowledgement/acknowledgement.tex
@@ -20,7 +20,7 @@ Honestly, how do you do that? It's very impressive.
 No good thesis\footnote{Though the quality of this one is debatable.} wouldn't be complete without a commitment to the authors friends.
 I first met some of you on the literal first day of my undergraduate degree, it's really quite incredible how you've all tolerated my nonsense for so long.
 From essentially forcing my way into Rob's house so I could cook some disastrous fried chicken, to playing \textit{Super Smash Bros.} all night long on it's release day, to watching trashy movies over the internet at the height of a global pandemic, these are moments I'll treasure for the rest of my life.
-In particular, those who are still in Leeds, Rob, Matt, Kelsie, Alex and Sam; as well as those who aren't, Martin, Caz, Andy, and Devon.
+In particular, those who are still in Leeds, Rob\footnote{\emph{``People can put whatever they want in footnotes, nobody reads them.''} - Dr. Rob Welch}, Matt, Kelsie, Alex and Sam; as well as those who aren't, Martin, Caz, Andy, and Devon.
 Thank you all, for filling my life with joy this past decade.
 To my partner Pruthvi, I cannot stress how unlikely it is that the two of us even met - two people finding and falling for each other on the more esoteric circles of the internet is like two particles colliding in the tenuous interstellar medium, if you'll excuse the extremely trite metaphor.
 You've been loving, kind, helpful, and the most wonderful partner anyone could ask for.
