Some updates, using quiver for things

--- a/Common_Symbols/Common_Symbols.tex
+++ b/Common_Symbols/Common_Symbols.tex
@@ -21,9 +21,12 @@ List of common symbols, if symbol requires a derivation, the appropriate equatio
   $H_{coll}$ & Grain heating rate due to ions & \\
   $H_{el}$ & Grain heating rate due to electrons & \\
   $i$ & Inclination & \\
+  $\mathcal{L}$ & Cooling rate per unit volume (typically \si{\erg\per\centi\metre\cubed}) & Eq. \ref{eq:energylossrate} \\ 
   $\lumin_\star$ & Stellar luminosity & \\
   $\mass_\star$ & Stellar mass & \\
   $\mdot$ & Mass loss rate & \\
+  $t_\text{cool}$ & Cooling timescale & Eq. \ref{eq:taucool} \\
+  $t_\text{esc}$ & Escape timescale & Eq. \ref{eq:tauesc} \\
   $v_\infty$ & Wind terminal velocity & \\
   $z$ & Dust-to-gas mass ratio  & \\
 
@@ -41,8 +44,6 @@ List of common symbols, if symbol requires a derivation, the appropriate equatio
   
   $\tau_\text{KH}$ & Kelvin-Helmholtz timescale & Eq. \ref{eq:khtime} \\
   $\tau_\text{ff}$ & Free-fall timescale & Eq. \ref{eq:fftime} \\
-  $\tau_\text{cool}$ & Cooling timescale & Eq. \ref{eq:taucool} \\
-  $\tau_\text{esc}$ & Escape timescale & Eq. \ref{eq:tauesc} \\
 
   $\mu$ & Mean molecular mass & \\
 
@@ -50,11 +51,14 @@ List of common symbols, if symbol requires a derivation, the appropriate equatio
 
   $\chi$ & Cooling parameter  & Eq. \ref{eq:coolingparameter} \\
 
+  $\gamma$ & Ratio of specific heats & \\
+
   % Include Units from here
 
   \hline
 
   $\sigma$ & Stefan-Boltzmann constant & \SI{5.670e-5}{erg.cm^{-2}.s^{-1}.K^{-4}} \\
+  $c$ & Speed of light in a vacuum & \SI{2.998e+10}{cm.s^{-1}} \\
 
   \si{\solarmass} & Solar mass & \num{1.988e+33} \si{\gram} \\
   \si{\solarmass\per\year} & Solar mass per year & \SI{6.301e+25}{\gram\per\second} \\
