--- a/References/library-biblatex.bib
+++ b/References/library-biblatex.bib
@@ -1114,6 +1114,17 @@
   file = {/Users/py13je/Zotero/storage/4Y2Q8AYM/Draine and Salpeter - 1979 - On the physics of dust grains in hot gas.pdf}
 }
 
+@book{drainePhysicsInterstellarIntergalactic2011,
+  title = {Physics of the {{Interstellar}} and {{Intergalactic Medium}}},
+  author = {Draine, Bruce T.},
+  date = {2011-01-01},
+  journaltitle = {Physics of the Interstellar and Intergalactic Medium by Bruce T. Draine. Princeton University Press},
+  url = {https://ui.adsabs.harvard.edu/abs/2011piim.book.....D},
+  urldate = {2022-02-25},
+  annotation = {ADS Bibcode: 2011piim.book.....D},
+  file = {/Users/py13je/Zotero/storage/IKYT26ZW/Draine - 2011 - Physics of the Interstellar and Intergalactic Medi.pdf}
+}
+
 @article{dwek_infrared_1981,
   title = {The {{Infrared Emission From Supernova Condensates}}},
   author = {Dwek, E. and Werner, M. W.},
@@ -1948,6 +1959,21 @@
   file = {/Users/py13je/Zotero/storage/D5X3PJFI/Brickhouse - 2002 - Atomic Data Needs for X-ray Astronomy.pdf}
 }
 
+@article{kaastraSPEXHighresolutionCosmic2013,
+  title = {{{SPEX}}: {{High-resolution}} Cosmic {{X-ray}} Spectra Analysis},
+  shorttitle = {{{SPEX}}},
+  author = {Kaastra, J. S. and Raassen, A. J. J. and de Plaa, J. and Gu, Liyi},
+  options = {useprefix=true},
+  date = {2013-08-01},
+  journaltitle = {Astrophysics Source Code Library},
+  pages = {ascl:1308.014},
+  url = {https://ui.adsabs.harvard.edu/abs/2013ascl.soft08014K},
+  urldate = {2022-02-27},
+  abstract = {SPEX is optimized for the analysis and interpretation of high-resolution cosmic X-ray spectra. The software is especially suited for fitting spectra obtained by current X-ray observatories like XMM-Newton, Chandra, and Suzaku. SPEX can fit multiple spectra with different model components simultaneously and handles highly complex models with many free parameters.},
+  keywords = {Software},
+  annotation = {ADS Bibcode: 2013ascl.soft08014K}
+}
+
 @article{kapteynAbsorptionLightSpace1909,
   title = {On the {{Absorption}} of {{Light}} in {{Space}}},
   author = {Kapteyn, J. C.},
@@ -1990,6 +2016,23 @@
   url = {https://ui.adsabs.harvard.edu/abs/2012sse..book.....K},
   urldate = {2021-07-26},
   file = {/Users/py13je/Zotero/storage/NBMMRE5G/Kippenhahn et al. - 2012 - Stellar Structure and Evolution.pdf}
+}
+
+@article{kohnAngularDistributionBremsstrahlung2014,
+  title = {Angular Distribution of {{Bremsstrahlung}} Photons and of Positrons for Calculations of Terrestrial Gamma-Ray Flashes and Positron Beams},
+  author = {K\"ohn, Christoph and Ebert, Ute},
+  date = {2014-01-01},
+  journaltitle = {Atmospheric Research},
+  volume = {135},
+  pages = {432--465},
+  issn = {0169-8095},
+  doi = {10.1016/j.atmosres.2013.03.012},
+  url = {https://ui.adsabs.harvard.edu/abs/2014AtmRe.135..432K},
+  urldate = {2022-02-26},
+  abstract = {Within thunderstorms electrons can gain energies of up to hundred(s) of MeV. These electrons can create X-rays and gamma-rays as Bremsstrahlung when they collide with air molecules. Here we calculate the distribution of angles between incident electrons and emitted photons as a function of electron and photon energy. We derive these doubly differential cross-sections by integrating analytically over the triply differential cross-sections derived by Bethe and Heitler; this is appropriate for light atoms like nitrogen and oxygen (Z = 7, 8) if the energy of incident and emitted electron is larger than 1 keV. We compare our results with the approximations and cross section used by other authors. We also discuss some simplifying limit cases, and we derive some simple approximation for the most probable scattering angle. We also provide cross sections for the production of electron positron pairs from energetic photons when they interact with air molecules. This process is related to the Bremsstrahlung process by some physical symmetry. Therefore the results above can be transferred to predictions on the angles between incident photon and emitted positron, again as a function of photon and positron energy. We present the distribution of angles and again a simple approximation for the most probable scattering angle. Our results are given as analytical expressions as well as in the form of a C++ code that can directly be implemented into Monte Carlo codes.},
+  keywords = {Physics - Atmospheric and Oceanic Physics},
+  annotation = {ADS Bibcode: 2014AtmRe.135..432K},
+  file = {/Users/py13je/Zotero/storage/XKKYPWXV/Köhn and Ebert - 2014 - Angular distribution of Bremsstrahlung photons and.pdf}
 }
 
 @book{krugel_physics_2002,
@@ -2336,7 +2379,7 @@
   file = {/Users/py13je/Zotero/storage/8CQNDMKS/Lucy and Solomon - 1970 - Mass Loss by Hot Stars.pdf}
 }
 
-@book{maciel_hydrodynamics_2014,
+@book{macielHydrodynamicsStellarWinds2014,
   title = {Hydrodynamics and {{Stellar Winds}}: {{An Introduction}}},
   shorttitle = {Hydrodynamics and {{Stellar Winds}}},
   author = {Maciel, Walter J.},
@@ -2348,7 +2391,7 @@
   abstract = {Introduces hydrodynamics to undergraduate students in physics and astrophysics.Stellar winds are a common phenomenon in the life of stars, from the dwarfs like the Sun to the red giants and hot supergiants, constituting one of the basic aspects of modern astrophysics. Stellar winds are a hydrodynamic phenomenon in which circumstellar gases expand towards the interstellar medium. This book presents an elementary introduction to the fundamentals of hydrodynamics with an application to the study of stellar winds. The principles of hydrodynamics have many other applications, so that the book can be used as an introduction to hydrodynamics for students of physics, astrophysics and other related areas.},
   isbn = {978-3-319-04327-2},
   langid = {english},
-  file = {/Users/py13je/Zotero/storage/8TBD4ARN/9783319043272.html}
+  file = {/Users/py13je/Zotero/storage/8ZND9G22/Maciel - 2014 - Hydrodynamics and Stellar Winds An Introduction.pdf;/Users/py13je/Zotero/storage/8TBD4ARN/9783319043272.html}
 }
 
 @article{madhusudhanExoplanetaryAtmospheresKey2019,
@@ -2518,6 +2561,38 @@
   abstract = {Some carbon-rich Wolf-Rayet stars are known to form dust (WCd stars). Several of these systems are now known to be binary stars where the shocked wind collisions provide the needed high densities and carbon-rich environments in which to form dust. However, we are not yet certain if all WCd stars are binaries or not, or if the dust can form in single WCd stars. We began a survey of known WCd binaries with the high-resolution IGRINS spectrograph in the near-infrared H and K bands. We report on the signatures of the massive O star companion in the WR 140 system as well as preliminary results on other WCd binaries as we begin to expand our survey to most known Galactic WCd stars with IGRINS at Gemini.},
   eventtitle = {American {{Astronomical Society Meeting Abstracts}}},
   file = {/Users/py13je/Zotero/storage/YBJBTKWM/abstract.html}
+}
+
+@article{meweCalculatedXradiationOptically1985,
+  title = {Calculated {{X-radiation}} from Optically Thin Plasmas. {{V}}.},
+  author = {Mewe, R. and Gronenschild, E. H. B. M. and van den Oord, G. H. J.},
+  options = {useprefix=true},
+  date = {1985-11},
+  journaltitle = {Astronomy and Astrophysics Supplement Series},
+  volume = {62},
+  pages = {197--254},
+  issn = {0365-0138},
+  url = {https://ui.adsabs.harvard.edu/abs/1985A&AS...62..197M/abstract},
+  urldate = {2022-02-27},
+  abstract = {The spectral line list in a previously developed computer code has been updated and extended with many new lines up to 300 A. These lines comprise: H- and He-like n = 1-2 lines, together with their satellites which are produced by innershell transitions: 2l-nl-prime (n = 3, 4) transitions in Fe XVII-XXIV (10-17 A); 2s-2p lines in Fe XVIII-XXIII and Ni XX-XXV (90-140 A); 3l-nl-prime (n = 3, 4) transitions in Fe VIII-XVI and Ni X-XIV (50-200 A), and many lines from Li to Ne isoelectronic sequences of elements C to Ca (20-300 A). Intensities of 2131 spectral lines are tabulated over the temperature range 3 x 10 to the 4th - 10 to the 9th K.},
+  langid = {english},
+  file = {/Users/py13je/Zotero/storage/83V28W2G/Mewe et al. - 1985 - Calculated X-radiation from optically thin plasmas.pdf;/Users/py13je/Zotero/storage/4Y7ZD4HZ/abstract.html}
+}
+
+@article{meweCalculatedXradiationOptically1986,
+  title = {Calculated {{X-radiation}} from Optically Thin Plasmas. {{VI}} - {{Improved}} Calculations for Continuum Emission and Approximation Formulae for Nonrelativistic Average {{Gaunt}} Actors.},
+  author = {Mewe, R. and Lemen, J. R. and van den Oord, G. H. J.},
+  options = {useprefix=true},
+  date = {1986-09},
+  journaltitle = {Astronomy and Astrophysics Supplement Series},
+  volume = {65},
+  pages = {511--536},
+  issn = {0365-0138},
+  url = {https://ui.adsabs.harvard.edu/abs/1986A&AS...65..511M/abstract},
+  urldate = {2022-02-27},
+  abstract = {The continuum spectrum of an optically thin plasma whose electrons have a Maxwellian energy distribution is calculated for the wavelength range 1 - 1000 \AA{} and temperature range 0.01 - 100 MK. The effect of recombination to excited states on the free-bound emission is taken into account. Simple analytic approximations to the total free-free, free-bound and two-photon Gaunt factors are presented for various wavelength and temperature intervals covering the whole considered range. A simple computer routine for calculating the continuum emission with the aid of this approximation is given.},
+  langid = {english},
+  file = {/Users/py13je/Zotero/storage/GMFE4X6P/Mewe et al. - 1986 - Calculated X-radiation from optically thin plasmas.pdf;/Users/py13je/Zotero/storage/PISVZVM6/abstract.html}
 }
 
 @article{meyerStabilizedRungeKuttaLegendreMethod2014,
@@ -2771,6 +2846,41 @@
   abstract = {We report on the first detection of a global change in the X-ray emitting properties of a wind\textendash wind collision, thanks to XMM-Newton observations of the massive Small Magellenic Cloud (SMC) system HD 5980. While its light curve had remained unchanged between 2000 and 2005, the X-ray flux has now increased by a factor of {$\sim$}2.5, and slightly hardened. The new observations also extend the observational coverage over the entire orbit, pinpointing the light-curve shape. It has not varied much despite the large overall brightening, and a tight correlation of fluxes with orbital separation is found without any hysteresis effect. Moreover, the absence of eclipses and of absorption effects related to orientation suggests a large size for the X-ray emitting region. Simple analytical models of the wind\textendash wind collision, considering the varying wind properties of the eruptive component in HD 5980, are able to reproduce the recent hardening and the flux-separation relationship, at least qualitatively, but they predict a hardening at apastron and little change in mean flux, contrary to observations. The brightness change could then possibly be related to a recently theorized phenomenon linked to the varying strength of thin-shell instabilities in shocked wind regions.},
   langid = {english},
   file = {/Users/py13je/Zotero/storage/HX6FFG4C/Nazé et al. - 2018 - A Changing Wind Collision.pdf}
+}
+
+@article{neufeldRadiativeCoolingWarm1993,
+  title = {Radiative {{Cooling}} of {{Warm Molecular Gas}}},
+  author = {Neufeld, David A. and Kaufman, Michael J.},
+  date = {1993-11-01},
+  journaltitle = {The Astrophysical Journal},
+  volume = {418},
+  pages = {263},
+  issn = {0004-637X},
+  doi = {10.1086/173388},
+  url = {https://ui.adsabs.harvard.edu/abs/1993ApJ...418..263N},
+  urldate = {2022-02-25},
+  abstract = {We consider the radiative cooling of warm (T {$\geq$} 100 K), fully molecular astrophysical gas by rotational and vibrational transitions of the molecules H2O, CO, and H2. Using an escape probability method to solve for the molecular level populations, we have obtained the cooling rate for each molecule as a function of temperature, density, and an optical depth parameter. A four-parameter expression proves useful in fitting the run of cooling rate with density for any fixed values of the temperature and optical depth parameter. We identify the various cooling mechanisms which are dominant in different regions of the astrophysically relevant parameter space. Given the assumption that water is very abundant in warm regions of the interstellar medium, H2O rotational transitions are found to dominate the cooling of warm interstellar gas over a wide portion of the parameter space considered. While chemical models for the interstellar medium make the strong prediction that water will be produced copiously at temperatures above a few hundred degrees, our assumption of a high water abundance has yet to be tested observationally. The Infrared Space Observatory and the Submillimeter Wave Astronomy Satellite will prove ideal instruments for testing whether water is indeed an important coolant of interstellar and circumstellar gas.},
+  keywords = {ISM: MOLECULES,MOLECULAR PROCESSES,STARS: CIRCUMSTELLAR MATTER},
+  annotation = {ADS Bibcode: 1993ApJ...418..263N},
+  file = {/Users/py13je/Zotero/storage/CHKMMZRH/Neufeld and Kaufman - 1993 - Radiative Cooling of Warm Molecular Gas.pdf}
+}
+
+@article{neufeldThermalBalanceDense1995,
+  title = {Thermal {{Balance}} in {{Dense Molecular Clouds}}: {{Radiative Cooling Rates}} and {{Emission-Line Luminosities}}},
+  shorttitle = {Thermal {{Balance}} in {{Dense Molecular Clouds}}},
+  author = {Neufeld, David A. and Lepp, Stephen and Melnick, Gary J.},
+  date = {1995-09-01},
+  journaltitle = {The Astrophysical Journal Supplement Series},
+  volume = {100},
+  pages = {132},
+  issn = {0067-0049},
+  doi = {10.1086/192211},
+  url = {https://ui.adsabs.harvard.edu/abs/1995ApJS..100..132N},
+  urldate = {2022-02-25},
+  abstract = {We consider the radiative cooling of fully shielded molecular astrophysical gas over a wide range of temperatures (10K {$\leq$} T {$\leq$} 2500K) and H2 densities (l03 cm-3 {$\leq$} n(H2) {$\leq$} 1010 cm-3). Our model for the radiative cooling of molecular gas includes a detailed treatment of the interstellar chemistry that determines the abundances of important coolant molecules, and a detailed treatment of the excitation of the species H2, CO, H2O, HC1, O2, C, O, and their isotopic variants where important. We present results for the total radiative cooling rate and for the cooling rate due to individual coolant species, as a function of the gas temperature, density, and optical depth. We have also computed the individual millimeter, submillimeter, and far-infrared line strengths that contribute to the total radiative cooling rate, and we have obtained example spectra for the submillimeter emission expected from molecular cloud cores. Many of the important cooling lines will be detectable using the Infrared Space Observatory and the Submillimeter Wave Astronomy Satellite.},
+  keywords = {ISM: CLOUDS,ISM: MOLECULES,MOLECULAR PROCESSES,RADIATIVE TRANSFER,RADIO LINES: ISM},
+  annotation = {ADS Bibcode: 1995ApJS..100..132N},
+  file = {/Users/py13je/Zotero/storage/TD49SGK8/Neufeld et al. - 1995 - Thermal Balance in Dense Molecular Clouds Radiati.pdf}
 }
 
 @article{neugentWolfRayetContent2019,
@@ -4488,6 +4598,23 @@
   isbn = {978-1-4822-6864-5},
   langid = {english},
   file = {/Users/py13je/Zotero/storage/CHE339J6/[Series in astronomy and astrophysics] D.C.B Whittet - Dust in the Galactic Environment (2003, IOP) - libgen.lc.pdf}
+}
+
+@article{wienerCosmicRayHeating2013,
+  title = {Cosmic {{Ray Heating}} of the {{Warm Ionized Medium}}},
+  author = {Wiener, Joshua and Zweibel, Ellen G. and Oh, S. Peng},
+  date = {2013-04-01},
+  journaltitle = {The Astrophysical Journal},
+  volume = {767},
+  pages = {87},
+  issn = {0004-637X},
+  doi = {10.1088/0004-637X/767/1/87},
+  url = {https://ui.adsabs.harvard.edu/abs/2013ApJ...767...87W},
+  urldate = {2022-02-27},
+  abstract = {Observations of line ratios in the Milky Way's warm ionized medium suggest that photoionization is not the only heating mechanism present. For the additional heating to explain the discrepancy, it would have to have a weaker dependence on the gas density than the cooling rate, \textbackslash Lambda n\_e\^2. Reynolds et al. suggested turbulent dissipation or magnetic field reconnection as possible heating sources. We investigate here the viability of MHD-wave mediated cosmic ray heating as a supplemental heating source. This heating rate depends on the gas density only through its linear dependence on the Alfv\'en speed, which goes as n\_e\^\{-1/2\}. We show that, scaled to appropriate values of cosmic ray energy density, cosmic ray heating can be significant. Furthermore, this heating is stable to perturbations. These results should also apply to warm ionized gas in other galaxies.},
+  keywords = {Astrophysics - Astrophysics of Galaxies,Astrophysics - High Energy Astrophysical Phenomena,cosmic rays,galaxies: halos,galaxies: ISM,H II regions,ISM: general,magnetohydrodynamics: MHD},
+  annotation = {ADS Bibcode: 2013ApJ...767...87W},
+  file = {/Users/py13je/Zotero/storage/S28HKC6Q/Wiener et al. - 2013 - Cosmic Ray Heating of the Warm Ionized Medium.pdf}
 }
 
 @article{wiescherIgnitionCoolingXRay2000,
