--- a/Thesis.tex
+++ b/Thesis.tex
@@ -90,6 +90,9 @@
 % Hyphen texttt{}
 \usepackage[htt]{hyphenat}
 
+\usepackage{quiver}
+\usepackage{adjustbox}
+
 % Define block styles
 \tikzstyle{decision} = [diamond, draw, fill=blue!20, 
     text width=8em, text badly centered, inner sep=0pt]
