--- a/Abbreviations/Abbreviations.tex
+++ b/Abbreviations/Abbreviations.tex
@@ -12,6 +12,8 @@ List of common abbreviations, if an abbreviation is important enough to warrant 
     BODMAS & Binary Orbit Dust Model with Accretion and Sputtering & Section \ref{sec:bodmas} \\
     CAK & Castor, Abbott \& Klein (\citeyear{castor_radiation-driven_1975}) theory \& Section \ref{sec:cak} \\
     CWB & Colliding Wind Binary  & Section \ref{sec:obtype} \\
+    FGC & Fighting Game Community & Section \ref{sec:wcrcooling} \\
+    GCR & Galactic Cosmic Ray & Section \ref{sec:wcrcooling} \\
     GMC & Giant Molecular Cloud & Section \ref{sec:obtype}\\
     ISM & Interstellar Medium & Section \ref{sec:earlytype} \\
     KH  & Kelvin-Helmholtz & \ref{sec:earlytype} \\ 
