Chapter 2 content complete! - Still definitely needs some proof reading! - Now on to chapter 3!

--- a/Abbreviations/Abbreviations.tex
+++ b/Abbreviations/Abbreviations.tex
@@ -19,6 +19,7 @@ List of common abbreviations, if an abbreviation is important enough to warrant 
     KH  & Kelvin-Helmholtz & \ref{sec:earlytype} \\ 
     LBV & Luminous Blue Variable & Section \ref{sec:obtype} \\
     OB  & O or B type star & Section \ref{sec:obtype} \\ 
+    PAH & Polycyclic Aromatic Hydrocarbon & Section \ref{sec:dust} \\
     RSG & Red Supergiant & Section \ref{sec:obtype} \\
     WC  & WR Carbon Phase & Section \ref{sec:wrtype} \\
     WCd & Dust forming WC star & Section \ref{sec:cwbdust} \\
@@ -29,7 +30,13 @@ List of common abbreviations, if an abbreviation is important enough to warrant 
 
     \hline
 
+    AVX & Advanced Vector Extensions & \\
+    GCC & GNU Compiler Collection & \\
+    GNU & GNU's Not Unix! & \\
+    ICC & Intel Compiler Collection & \\
     JIT & Just In Time & Section \ref{sec:visualisation} \\
+    SIMD & Single Instruction, Multiple Data & \\
+    GPU & Graphics Processing Unit & \\
 
   \end{tabular} 
   \label{tbl:Abbreviations}
