--- a/Common_Symbols/Common_Symbols.tex
+++ b/Common_Symbols/Common_Symbols.tex
@@ -57,6 +57,10 @@ List of common symbols, if symbol requires a derivation, the appropriate equatio
 
   \hline
 
+  \si{\atomicmassunit} & Atomic Mass Unit & \SI{1.661e-24}{\gram} \\
+
+  $k\rms{B}$ & Boltzmann Constant & \SI{1.381e-16}{erg.K^{-1}} \\
+
   $\sigma$ & Stefan-Boltzmann constant & \SI{5.670e-5}{erg.cm^{-2}.s^{-1}.K^{-4}} \\
   $c$ & Speed of light in a vacuum & \SI{2.998e+10}{cm.s^{-1}} \\
 
