--- a/References/library.bib
+++ b/References/library.bib
@@ -953,49 +953,6 @@
   file = {/Users/py13je/Zotero/storage/VJZRKEVD/Dougherty et al. - 2003 - Radio emission models of colliding-wind binary sys.pdf}
 }
 
-@article{draine_destruction_1979,
-  title = {Destruction Mechanisms for Interstellar Dust},
-  author = {Draine, BT and Salpeter, EE},
-  year = {1979},
-  journal = {The Astrophysical Journal},
-  volume = {231},
-  pages = {438--455},
-  file = {/Users/py13je/Zotero/storage/3PY8EUP6/Draine and Salpeter - 1979 - Destruction mechanisms for interstellar dust.pdf}
-}
-
-@article{draine_infrared_2001,
-  title = {Infrared Emission from Interstellar Dust. {{I}}. {{Stochastic}} Heating of Small Grains},
-  author = {Draine, BT and Li, Aigen},
-  year = {2001},
-  journal = {The Astrophysical Journal},
-  volume = {551},
-  number = {2},
-  pages = {807}
-}
-
-@article{draine_interstellar_2003,
-  title = {Interstellar {{Dust Grains}}},
-  author = {Draine, B.T.},
-  year = {2003},
-  month = sep,
-  journal = {Annual Review of Astronomy and Astrophysics},
-  volume = {41},
-  number = {1},
-  pages = {241--289},
-  issn = {0066-4146, 1545-4282},
-  doi = {10.1146/annurev.astro.41.011802.094840},
-  langid = {english},
-  file = {/Users/py13je/Zotero/storage/S7Y6IBDU/Draine - 2003 - Interstellar Dust Grains.pdf}
-}
-
-@article{draine_theory_nodate,
-  title = {Theory of {{Interstellar Shocks}}},
-  author = {Draine, Bruce T},
-  pages = {61},
-  langid = {english},
-  file = {/Users/py13je/Zotero/storage/8XQKVVK7/Draine - Theory of Interstellar Shocks.pdf}
-}
-
 @article{draineDestructionMechanismsInterstellar1979,
   title = {Destruction Mechanisms for Interstellar Dust},
   author = {Draine, B. T. and Salpeter, E. E.},
@@ -1008,6 +965,16 @@
   abstract = {Various dust-grain destruction mechanisms that may be important in different components of the interstellar medium (ISM) are studied. Destruction rates for grains are estimated as a function of size, composition, and type of region in which the grains are located, and the relative importance of the different mechanisms is evaluated. Grain destruction behind steady-state shock waves is examined, grain motion and sputtering in the cooling postshock gas is analyzed, and numerical results for the fractional grain mass sputtered are given for various preshock conditions, grain types and sizes, and shock speeds of 10 to 350 km/s. Grain sputtering in spherically symmetric supernova remnants is investigated as a function of supernova energy and ambient density. The results are applied to consider the destruction of grains (1) in collisions between randomly moving interstellar clouds; (2) in supernovae in a 'one-phase', a 'two-phase', and a 'three-phase' ISM; (3) by sputtering in H II regions; (4) by cosmic-ray sputtering; (5) by UV photodesorption; and (6) by sublimation of volatile mantles from grains heated in H II regions or by supernova radiation.},
   keywords = {Cosmic Dust,Cosmic Rays,Desorption,Graphite,H Ii Regions,Interstellar Matter,Nebulae,Shock Wave Propagation,Sputtering,Steady State,Supernova Remnants},
   file = {/Users/py13je/Zotero/storage/K79FT2B2/Draine and Salpeter - 1979 - Destruction mechanisms for interstellar dust.pdf}
+}
+
+@article{draineDestructionMechanismsInterstellar1979a,
+  title = {Destruction Mechanisms for Interstellar Dust},
+  author = {Draine, B. T. and Salpeter, EE},
+  year = {1979},
+  journal = {The Astrophysical Journal},
+  volume = {231},
+  pages = {438--455},
+  file = {/Users/py13je/Zotero/storage/3PY8EUP6/Draine and Salpeter - 1979 - Destruction mechanisms for interstellar dust.pdf}
 }
 
 @article{draineInfraredEmissionInterstellar2001,
@@ -1026,6 +993,31 @@
   file = {/Users/py13je/Zotero/storage/FA3QNHKY/Draine and Li - 2001 - Infrared Emission from Interstellar Dust. I. Stoch.pdf;/Users/py13je/Zotero/storage/FTYU4IMG/320227.html}
 }
 
+@article{draineInfraredEmissionInterstellar2001a,
+  title = {Infrared Emission from Interstellar Dust. {{I}}. {{Stochastic}} Heating of Small Grains},
+  author = {Draine, B. T. and Li, Aigen},
+  year = {2001},
+  journal = {The Astrophysical Journal},
+  volume = {551},
+  number = {2},
+  pages = {807}
+}
+
+@article{draineInterstellarDustGrains2003,
+  title = {Interstellar {{Dust Grains}}},
+  author = {Draine, B. T.},
+  year = {2003},
+  month = sep,
+  journal = {Annual Review of Astronomy and Astrophysics},
+  volume = {41},
+  number = {1},
+  pages = {241--289},
+  issn = {0066-4146, 1545-4282},
+  doi = {10.1146/annurev.astro.41.011802.094840},
+  langid = {english},
+  file = {/Users/py13je/Zotero/storage/S7Y6IBDU/Draine - 2003 - Interstellar Dust Grains.pdf}
+}
+
 @article{drainePhysicsDustGrains1979,
   title = {On the Physics of Dust Grains in Hot Gas},
   author = {Draine, B. T. and Salpeter, E. E.},
@@ -1042,12 +1034,20 @@
 
 @book{drainePhysicsInterstellarIntergalactic2011,
   title = {Physics of the {{Interstellar}} and {{Intergalactic Medium}}},
-  author = {Draine, Bruce T.},
+  author = {Draine, B. T.},
   year = {2011},
   month = jan,
   journal = {Physics of the Interstellar and Intergalactic Medium by Bruce T. Draine. Princeton University Press},
   annotation = {ADS Bibcode: 2011piim.book.....D},
   file = {/Users/py13je/Zotero/storage/IKYT26ZW/Draine - 2011 - Physics of the Interstellar and Intergalactic Medi.pdf}
+}
+
+@article{draineTheoryInterstellarShocks,
+  title = {Theory of {{Interstellar Shocks}}},
+  author = {Draine, B. T.},
+  pages = {61},
+  langid = {english},
+  file = {/Users/py13je/Zotero/storage/8XQKVVK7/Draine - Theory of Interstellar Shocks.pdf}
 }
 
 @article{dwek_infrared_1981,
