First pass at the introduction mini-chapter done!

--- a/Abbreviations/Abbreviations.tex
+++ b/Abbreviations/Abbreviations.tex
@@ -9,13 +9,13 @@ List of common abbreviations, if an abbreviation is important enough to warrant 
 
     3$\alpha$ & Triple-$\alpha$ helium burning & \ref{sec:evolvedstars} \\
     AGB & Asymptotic Giant Branch & \ref{sec:evolvedstars} \\
-    BODMAS & Binary Orbit Dust Model with Accretion and Sputtering & Section \ref{sec:bodmas} \\
+    \bidmas{} & Binary Interaction Dust Model with Accretion and Sputtering & Section \ref{sec:bidmas} \\
     CAK & Castor, Abbott \& Klein (\citeyear{castor_radiation-driven_1975}) theory \& Section \ref{sec:cak} \\
     CWB & Colliding Wind Binary  & Section \ref{sec:obtype} \\
     FGC & Fighting Game Community & Section \ref{sec:wcrcooling} \\
     GCR & Galactic Cosmic Ray & Section \ref{sec:wcrcooling} \\
     GMC & Giant Molecular Cloud & Section \ref{sec:obtype}\\
-    ISM & Interstellar Medium & Section \ref{sec:earlytype} \\
+    ISM & InterStellar Medium & Section \ref{sec:earlytype} \\
     KH  & Kelvin-Helmholtz & \ref{sec:earlytype} \\ 
     LBV & Luminous Blue Variable & Section \ref{sec:obtype} \\
     OB  & O or B type star & Section \ref{sec:obtype} \\ 
