--- a/Thesis.tex
+++ b/Thesis.tex
@@ -137,6 +137,8 @@
 \newcommand{\ts}{\textsuperscript}
 \newcommand{\mg}{\texttt{MG}}
 \newcommand{\athena}{\texttt{Athena++}}
+\newcommand{\bidmas}{\texttt{BIDMAS}}
+
 \newcommand{\link}[1]{\texttt{\href{#1}{#1}}}
 \newcommand{\footlink}[2]{\href{#2}{#1}\footnote{\texttt{\href{#2}{#2}}}}
 
@@ -214,8 +216,8 @@
 
 \maketitle
 %set the number of sectioning levels that get number and appear in the contents
-\setcounter{secnumdepth}{2}
-\setcounter{tocdepth}{2}
+\setcounter{secnumdepth}{4}
+\setcounter{tocdepth}{4}
 \pagenumbering{roman}
 \frontmatter
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -225,20 +227,6 @@
 % \include{IPStatement/ipstatement}
 
 \clearpage
-
-% \pagestyle{plain}
-% \null\vfill
-% \begin{center}
-%   \parbox{0.5\textwidth}{%
-%     \raggedright{\large\itshape%
-%     ``Space is \textbf{big}. Really big. You just won't believe how vastly, hugely, mind-bogglingly big it is. I mean, you may think it's a long way down the road to the chemist's, but that's just peanuts to space.''
-%     \par%\bigskip
-%     }
-%     \rule{\linewidth}{0.4pt}
-%     \raggedleft{\Large\MakeUppercase{Douglas Adams}\\\large\itshape{The Hitchhiker's Guide to the Galaxy}\par}%
-%   }
-% \end{center}
-% \vfill\vfill
 
 \begin{dedication}
   \begin{center}
